ingress/preview/preview-test-vet-1/ingress-preview-test-vet-1.yaml

# ingress/preview/preview-test-vet-1/ingress-preview-test-vet-1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress-preview
  namespace: preview-preview-test-vet-1
  labels:
    app.kubernetes.io/name: petclinic-ingress-preview
spec:
  rules:
    - host: test-vet-1.petclinic.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
